--- a/NEW/COR1.htm
+++ b/NEW/COR1.htm
@@ -1,7 +1,7 @@
 <html>
 
-<head onload="f()">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<head>
+
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
@@ -50,7 +50,7 @@ div.WordSection1
 
 </head>
 
-<body>
+<body lang=EN-PH>
 
 <div class=WordSection1>
 
@@ -90,7 +90,7 @@ font-family:"Times New Roman",serif'>To Whom it May Concern:</span></p>
 
 <p class=MsoNormal style='text-indent:.5in;line-height:normal'><span
 style='font-size:12.0pt;font-family:"Times New Roman",serif'>This is to certify
-that <span id="name" style='font-size:12.0pt;font-family:"Times New Roman",serif'></span> Bonafide resident of Brgy.
+that ___________________________________________ Bonafide resident of Brgy.
 Ayos lomboy, Guimba, Nueva Ecija and he/she is personally known to me to be a
 man/woman of good moral character and law-a</span><span style='position:absolute;
 z-index:-1895823360;left:0px;margin-left:87px;margin-top:13px;width:467px;
@@ -103,8 +103,8 @@ font-family:"Times New Roman",serif'>&nbsp;</span></p>
 
 <p class=MsoNormal style='text-indent:.5in;line-height:normal'><span
 style='font-size:12.0pt;font-family:"Times New Roman",serif'>That he/she is
-presently reading of Purok <span id="poruk" style='font-size:12.0pt;font-family:"Times New Roman",serif'></span> Barangay Ayos lomboy, Guimba, Nueva Ecija
-Since <span id="dofdf" style='font-size:12.0pt;font-family:"Times New Roman",serif'></span> to date.</span></p>
+presently reading of Purok _____ Barangay Ayos lomboy, Guimba, Nueva Ecija
+Since ____________to date.</span></p>
 
 <p class=MsoNormal style='line-height:normal'><span style='font-size:12.0pt;
 font-family:"Times New Roman",serif'>&nbsp;</span></p>
@@ -127,7 +127,7 @@ font-family:"Times New Roman",serif'>&nbsp;</span></p>
 
 <p class=MsoNormal style='text-indent:.5in;line-height:normal'><span
 style='font-size:12.0pt;font-family:"Times New Roman",serif'>Given
-this <span id="datee" style='font-size:12.0pt;font-family:"Times New Roman",serif'></span> day of <span id="datemonth" style='font-size:12.0pt;font-family:"Times New Roman",serif'></span> <span id="dateyear" style='font-size:12.0pt;font-family:"Times New Roman",serif'></span> here at the Office of the Punong
+this_______day of______________20______here at the Office of the Punong
 Barangay, Barangay hall of Ayos Lomboy, Guimba, Nueva Ecija.</span></p>
 
 <p class=MsoNormal style='text-indent:.5in;line-height:normal'><span
@@ -138,15 +138,15 @@ line-height:107%;font-family:"Times New Roman",serif'>&nbsp;</span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
 "Times New Roman",serif'>Prepared
-By:                                                                                Certified
-By:  </span></p>
+By:ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Certified
+By:ï¿½ </span></p>
 
 <p class=MsoNormal style='margin-left:.5in;text-indent:.5in'><b><span
 style='font-size:12.0pt;line-height:107%;font-family:"Times New Roman",serif'>LERMA
-T ESCOBAR                                                          RICHARD G. SOLIMAN</span></b></p>
+T ESCOBARï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ RICHARD G. SOLIMAN</span></b></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
-"Times New Roman",serif'>                           Barangay Secretary                                                                  
+"Times New Roman",serif'>ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½Barangay Secretaryï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 Punong Barangay</span></p>
 
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%;font-family:
@@ -159,65 +159,7 @@ Punong Barangay</span></p>
 "Times New Roman",serif'>Note: Not valid without Barangay Seal</span></p>
 
 </div>
-<script type="text/javascript">
-        document.getElementById("name").innerHTML = getSavedValue("bt"); 
-       
-        document.getElementById("dofdf").innerHTML = getSavedValue("dof");
-        document.getElementById("poruk").innerHTML = getSavedValue("porok");
 
-       	const d = new Date();
-		let day = d.getDate();
-		document.getElementById("datee").innerHTML = day;
-
-		const month = ["January","February","March","April","May","June","July","August","September","October","November","December"];
-
-		const d1 = new Date();
-		let namemonth = month[d1.getMonth()];
-		document.getElementById("datemonth").innerHTML = namemonth;
-
-		const d2 = new Date();
-		let year = d2.getFullYear();
-
-		document.getElementById("dateyear").innerHTML = year;
-
-         function getSavedValue  (v){
-            if (!localStorage.getItem(v)) {
-                return "";
-            }
-            return localStorage.getItem(v);
-        }
-</script>
-<script>
-
-var x = 0
-
- function f() {
-x++;
-};
-
-
-
-
-var favoriteMovie = sessionStorage.getItem('favoriteMovie');
-document.getElementById("print").innerHTML = favoriteMovie;
-
-</script>
- <script type="text/javascript">
-    $(document).ready(function () {
-        window.print();
-        setTimeout("closePrintView()", 100);
-    });
-    function closePrintView() {
-       var roc = getSavedValue("COR");
-        
-         if (roc == 'COR') {
-                document.location.href = 'DocReqmoreCOR';
-         }
-         else {
-                document.location.href = 'DocReqmore';
-         }
-    }
-</script>
 </body>
 
 </html>
