--- a/NEW/BARC.htm
+++ b/NEW/BARC.htm
@@ -1,6 +1,7 @@
 <html>
 
-<head>
+<head onload="f()">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
@@ -253,8 +254,7 @@ THE SANGGUNIANG BARANGAY</span></b></p>
   <p class=MsoNormal style='margin-top:0in;margin-right:0in;margin-bottom:0in;
   margin-left:9.75pt;margin-bottom:.0001pt;line-height:normal'>&nbsp;</p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'>                 THIS IS TO CERTIFY that MR./MRS.
-  __________________________________ is a bonafide resident of Barangay Ayos
+  normal'>                 THIS IS TO CERTIFY that MR./MRS. <span id="q1"></span> is a bonafide resident of Barangay Ayos
   Lomboy, Guimba, Nueva Ecija.</p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='position:absolute;z-index:-1895817216;margin-left:-107px;
@@ -262,9 +262,9 @@ THE SANGGUNIANG BARANGAY</span></b></p>
   src="BARC_files/image004.png"></span></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'>                 This certifies further he/she is a farmer and actual
-  tiller of an agricultural land with an area of _________ sq.m. ________
+  tiller of an agricultural land with an area of <span id="q2"></span> sq.m. <span id="q3"></span>
   hectare(s) more or less situated at Barangay Ayos Lomboy, Guimba, Nueva Ecija
-  registered in the name of MR./MRS. _____________________________________.</p>
+  registered in the name of MR./MRS. <span id="q4"></span>.</p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'>&nbsp;</p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
@@ -273,7 +273,7 @@ THE SANGGUNIANG BARANGAY</span></b></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'>&nbsp;</p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
-  normal'>                  Issued this _______ day of _________________, 2024
+  normal'>                  Issued this <span id="dayy"></span> day of <span id="monthh"></span>, 2024
   at Barangay Ayos Lomboy, Guimba, Nueva Ecija.</p>
   <p class=MsoNormal style='margin-top:0in;margin-right:0in;margin-bottom:0in;
   margin-left:.5in;margin-bottom:.0001pt;line-height:normal'><span
@@ -287,10 +287,10 @@ THE SANGGUNIANG BARANGAY</span></b></p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><img width=146 height=48 src="BARC_files/image005.png" align=left
   hspace=12 vspace=5 alt="ROGER ARANDA&#13;&#10;  BARC Chairman&#13;&#10;"></p>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
+  <p class=MsoNormal align=right style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><b><u><span style='font-size:12.0pt'>LERMA</span></u></b><b><u> </u></b><b><u><span
   style='font-size:12.0pt'>ESCOBAR</span></u></b></p>
-  <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
+  <p class=MsoNormal align=right style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'>Barangay Secretary</p>
   <p class=MsoNormal style='margin-bottom:0in;margin-bottom:.0001pt;line-height:
   normal'><span style='font-size:10.0pt'>&nbsp;</span></p>
@@ -315,7 +315,62 @@ THE SANGGUNIANG BARANGAY</span></b></p>
 <p class=MsoNormal>&nbsp;</p>
 
 </div>
+<script type="text/javascript">
+        document.getElementById("q1").innerHTML = getSavedValue("1q");
+        document.getElementById("q2").innerHTML = getSavedValue("2q");
+        document.getElementById("q3").innerHTML = getSavedValue("3q");
+        document.getElementById("q4").innerHTML = getSavedValue("4q");
 
+
+        const d = new Date();
+        let day = d.getDate();
+        document.getElementById("dayy").innerHTML = day; 
+
+        const month = ["January","February","March","April","May","June","July","August","September","October","November","December"]; 
+        const d1 = new Date();
+        let namemonth = month[d1.getMonth()];
+        document.getElementById("monthh").innerHTML = namemonth;
+
+
+         function getSavedValue  (v){
+            if (!localStorage.getItem(v)) {
+                return "";
+            }
+            return localStorage.getItem(v);
+        }
+</script>
+<script>
+
+var x = 0
+
+ function f() {
+x++;
+};
+
+
+
+
+var favoriteMovie = sessionStorage.getItem('favoriteMovie');
+document.getElementById("print").innerHTML = favoriteMovie;
+
+</script>
+ <script type="text/javascript">
+    $(document).ready(function () {
+        window.print();
+        setTimeout("closePrintView()", 300);
+    });
+    function closePrintView() {
+        var roc = getSavedValue("COR");
+        
+         if (roc == 'COR') {
+                document.location.href = 'DocReqmoreCOR';
+         }
+         else {
+                document.location.href = 'DocReqmore';
+         }
+        
+    }
+</script>
 </body>
 
 </html>
